do not create empty Skia surface (tdf#131939)

Apparently SalGraphics may be occassionally of size (0,0), such as
in this case where clipboard cleanup happens on exit. Just create
a tiny surface in that case.

Change-Id: Ic68deec6804c7e2099fc079d69018da7b780c8cb
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/92192
Tested-by: Jenkins
Reviewed-by: Luboš Luňák <l.lunak@collabora.com>